<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/GebruikerAfbeelding"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/naamGebruiker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/GebruikerAfbeelding"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/GebruikerAfbeelding"
        android:text="@string/gebruikersnaam"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/gebruikerStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/naamGebruiker"
        android:layout_below="@+id/naamGebruiker"
        android:layout_marginTop="10dp"
        android:text="@string/standaard_status" />

    <ImageView
        android:id="@+id/online_icon"
        android:layout_width="8dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/naamGebruiker"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/naamGebruiker"
        android:contentDescription="@string/online_icon"
        android:visibility="invisible"
        app:srcCompat="@android:drawable/presence_online" />

</RelativeLayout>