<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".ProfielActivity">

    <ImageView
        android:id="@+id/profielAfbeelding"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/verander_afbeelding"
        app:srcCompat="@mipmap/ic_launcher_round" />



    <TextView
        android:id="@+id/profielnaam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profielAfbeelding"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/gebruikersnaam"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/profielStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profielnaam"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/status"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/taartGrafiek"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_above="@+id/ProfielZendKnop"
        android:layout_below="@+id/profielStatus"
        android:layout_centerHorizontal="true" />

<!--    <TextView-->
<!--        android:id="@+id/profielAantal"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_above="@+id/ProfielZendKnop"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginBottom="12dp"-->
<!--        android:text="@string/totaalVrienden"-->
<!--        android:textColor="@color/colorPrimaryDark"-->
<!--        android:textSize="16sp" />-->

    <Button
        android:id="@+id/ProfielZendKnop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ProfielWeigerKnop"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/verstuurVerzoek"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/ProfielWeigerKnop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/weigerVerzoek"
        android:textColor="@android:color/white" />

</RelativeLayout>