<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".InstellingenActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/instelling_afbeelding"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/instellingenNaam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instelling_afbeelding"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/gebruikersnaam"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <Button
        android:id="@+id/instellingenStatusKnop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/verander_status"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/instellingenAfbeeldingKnop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/instellingenStatusKnop"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/verander_afbeelding"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/intellingenStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instellingenNaam"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/status"
        android:textColor="@color/colorAccent" />

</RelativeLayout>